--- a/package.json
+++ b/package.json
@@ -1,20 +1,36 @@
 {
-  "name": "@./source",
+  "name": "@monorepo/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "dev": "npx nx run-many --target=serve --all",
+    "buld": "npx nx run-many --target=build --all --skip-nx-cache"
+  },
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@nx/express": "^20.6.1",
     "@nx/js": "20.6.1",
+    "@nx/node": "20.6.1",
+    "@nx/web": "20.6.1",
+    "@nx/webpack": "20.6.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/express": "^4.17.21",
+    "@types/node": "18.16.9",
     "nx": "20.6.1",
+    "react-refresh": "^0.10.0",
     "tslib": "^2.3.0",
-    "typescript": "~5.7.2"
+    "typescript": "~5.7.2",
+    "webpack-cli": "^5.1.4"
   },
   "workspaces": [
-    "packages/*"
-  ]
+    "packages/*",
+    "apps/*"
+  ],
+  "dependencies": {
+    "express": "^4.21.2"
+  }
 }
