--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "npx nx run-many --target=serve --all",
-    "buld": "npx nx run-many --target=build --all --skip-nx-cache"
+    "build": "npx nx run-many --target=build --all --skip-nx-cache"
   },
   "private": true,
   "devDependencies": {
@@ -18,9 +18,14 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.10",
     "@types/node": "18.16.9",
+    "@types/swagger-ui-express": "^4.1.8",
     "nx": "20.6.1",
+    "prettier": "3.6.2",
     "react-refresh": "^0.10.0",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
@@ -31,6 +36,13 @@
     "apps/*"
   ],
   "dependencies": {
-    "express": "^4.21.2"
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "express-http-proxy": "^2.1.1",
+    "express-rate-limit": "^7.5.1",
+    "http-proxy-middleware": "^3.0.5",
+    "morgan": "^1.10.0",
+    "swagger-ui-express": "^5.0.1"
   }
 }
