--- a/apps/auth-service/tsconfig.app.json
+++ b/apps/auth-service/tsconfig.app.json
@@ -2,15 +2,15 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "dist",
-    "types": [
-      "node",
-      "express"
-    ],
+    "types": ["node", "express"],
     "rootDir": "src",
     "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo"
   },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": []
+  "include": ["src/**/*.ts"],
+  "exclude": [],
+  "references": [
+    {
+      "path": "../../packages/error-handler/tsconfig.lib.json"
+    }
+  ]
 }
