--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ out-tsc
 # dependencies
 node_modules
 
+.env
 # IDEs and editors
 /.idea
 .project
@@ -40,3 +41,5 @@ Thumbs.db
 
 .nx/cache
 .nx/workspace-data
+
+/generated/prisma
