--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "apps/*"
   ],
   "dependencies": {
+    "@prisma/client": "^6.11.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.21.2",
@@ -43,6 +44,7 @@
     "express-rate-limit": "^7.5.1",
     "http-proxy-middleware": "^3.0.5",
     "morgan": "^1.10.0",
+    "prisma": "^6.11.1",
     "swagger-ui-express": "^5.0.1"
   }
 }
