05: frontend-user-registration:email-otp

--- a/apps/auth-service/tsconfig.app.json
+++ b/apps/auth-service/tsconfig.app.json
@@ -10,7 +10,13 @@
   "exclude": [],
   "references": [
     {
+      "path": "../../packages/libs/redis/tsconfig.lib.json"
+    },
+    {
       "path": "../../packages/error-handler/tsconfig.lib.json"
+    },
+    {
+      "path": "../../packages/libs/prisma/tsconfig.lib.json"
     }
   ]
 }
