--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@swc/helpers": "~0.5.11",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.10",
     "@types/node": "18.16.9",
+    "@types/nodemailer": "^6.4.17",
     "@types/swagger-ui-express": "^4.1.8",
     "nx": "20.6.1",
     "prettier": "3.6.2",
@@ -33,17 +35,22 @@
   },
   "workspaces": [
     "packages/*",
-    "apps/*"
+    "apps/*",
+    "packages/libs/*"
   ],
   "dependencies": {
     "@prisma/client": "^6.11.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-http-proxy": "^2.1.1",
     "express-rate-limit": "^7.5.1",
     "http-proxy-middleware": "^3.0.5",
+    "ioredis": "^5.6.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.5",
     "prisma": "^6.11.1",
     "swagger-ui-express": "^5.0.1"
   }
