07:frontend-user-forgot-password

--- a/packages/libs/prisma/package.json
+++ b/packages/libs/prisma/package.json
@@ -2,13 +2,13 @@
   "name": "@monorepo/prisma",
   "version": "0.0.1",
   "private": true,
-  "main": "./index.js",
-  "types": "./index.d.ts",
+  "main": "./src/index.js",
+  "types": "./src/index.d.ts",
   "exports": {
     ".": {
-      "types": "./index.d.ts",
-      "import": "./index.js",
-      "default": "./index.js"
+      "types": "./src/index.d.ts",
+      "import": "./src/index.js",
+      "default": "./src/index.js"
     },
     "./package.json": "./package.json"
   },
