--- a/packages/libs/prisma/tsconfig.lib.json
+++ b/packages/libs/prisma/tsconfig.lib.json
@@ -2,13 +2,13 @@
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "rootDir": "src",
-    "outDir": "../../dist/packages/libs.prisma",
+    "rootDir": ".",
+    "outDir": "../../dist/packages/libs/prisma",
     "tsBuildInfoFile": "../../dist/packages/libs/prisma/tsconfig.lib.tsbuildinfo",
-    "emitDeclarationOnly": true,
+
     "forceConsistentCasingInFileNames": true,
     "types": ["node"]
   },
-  "include": ["src/**/*.ts", "index.ts"],
+  "include": ["src/**/*.ts", "src/index.ts"],
   "references": []
 }
