--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/cors": "^2.8.19",
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "18.16.9",
     "@types/nodemailer": "^6.4.17",
@@ -50,6 +51,7 @@
     "express-rate-limit": "^7.5.1",
     "http-proxy-middleware": "^3.0.5",
     "ioredis": "^5.6.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemailer": "^7.0.5",
     "prisma": "^6.11.1",
